samples/_failures_safe/1761457488_393a6f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_37b324d2.c:168:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  168 | void print_state_info
      | ^~~~
